# c_rpg

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md
include/: config.h  core.h  dungeon.h  enemy.h  game.h  input.h  player.h  renderer.h  types.h
include/core/: combat.h  core.h  enemy.h  item.h  player.h  types.h
include/systems/: double_buffer.h  input.h  renderer.h  save_load.h  viewport.h
package/: AppIcon.icns
package/linux/: build_linux.sh
package/macos/: Info.plist  build_dmg.sh
src/: config.c  core.c  dungeon.c  enemy.c  main.c  movement.c  player.c  render_world.c  title_screen.c
src/audio/: music.c  music.h  sfx.c  sfx.h
src/core/: combat.c  core.c  dungeon.c  enemy.c  item.c  player.c
src/game/: actions.c  actions.h  enemy.h  game.c  game.h  item.c  item.h  map.c  map.h  spell.c  spell.h
src/renderer/: class_select_renderer.c  class_select_renderer.h  game_over_renderer.c  game_over_renderer.h  game_renderer.c  game_renderer.h  halloffame_renderer.c  halloffame_renderer.h  help_renderer.c  help_renderer.h  info_panel.c  info_panel.h  inventory_renderer.c  inventory_renderer.h  item_icons.c  item_icons.h  landing_renderer.c  landing_renderer.h  message_bar.c  message_bar.h  minimap_renderer.c  minimap_renderer.h  name_entry_renderer.c  name_entry_renderer.h  renderer.c  renderer.h  shop_renderer.c  shop_renderer.h  slot_renderer.c  slot_renderer.h  spellbook_renderer.c  spellbook_renderer.h  sprites.c  sprites.h  viewport.c  viewport.h
src/screens/: class_select.c  class_select.h  help.c  help.h  inventory.c  inventory.h  landing.c  landing.h  name_entry.c  name_entry.h  shop.c  shop.h  slot_select.c  slot_select.h  spellbook.c  spellbook.h
src/systems/: double_buffer.c  highscore.c  highscore.h  render_world.c  save_load.c  save_load.h  title_screen.c  viewport.c
src/utils/: config.c
tests/: test_classes.c  test_dungeon.c  test_items.c  test_leveling.c  test_map.c  test_map_tiles.c  test_movement.c  test_runner.c  test_town.c  test_utils.h  test_viewport.c
